test_suite/test_programs/validation/validation_type_system.csd
vibe main

yeet "vibez"

slay main_character() {
    vibez.spill("=== Type System Test ===")
    
    sus int_val drip = 42
    vibez.spill("Integer:")
    vibez.spill(int_val)
    
    sus string_val drip = "Hello CURSED"
    vibez.spill("String:")
    vibez.spill(string_val)
    
    sus bool_val lit = based
    vibez.spill("Boolean:")
    vibez.spill(bool_val)
    
    vibez.spill("=== Test Complete ===")
}
