test_suite/test_programs/errors/01_division_by_zero.csd
vibe main

yeet "vibez"

slay main_character() {
    vibez.spill("=== Division by Zero Test ===")
    
    vibez.spill("Normal division:")
    vibez.spill(10 / 2)
    
    vibez.spill("Attempting division by zero:")
    vibez.spill(10 / 0)
    
    vibez.spill("This line should not execute if error handling works")
}
